Update Player Stat And Dialogue